kubernetes/system/monitoring/base/httproutes.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: httproute-external-grafana
  namespace: monitoring
spec:
  parentRefs:
  - name: external-gateway
    namespace: kube-system
  hostnames:
    - "grafana.ninebasetwo.net"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: grafana
      port: 80
